--- a/resource/langs/vi.json
+++ b/resource/langs/vi.json
@@ -62,7 +62,8 @@
     "HEADER.LENGTH": "Thời lượng",
     "HEADER.DOWNLOAD_BTN": "Tải nhạc",
     "HEADER.IMPORT_BTN": "Thêm nhạc",
-    "HEADER.UPDATE_PLAYLIST_BTN": "Sửa danh sách"
+    "HEADER.UPDATE_PLAYLIST_BTN": "Sửa danh sách",
+    "MESSAGE_NO_SONG": "Ôi không! danh sách này hiện đang trống. Xin hãy thêm nhạc vào danh sách."
   },
   "DOWNLOAD_DIALOG": {
     "LABEL": "Tải nhạc Youtube",
